--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -16,6 +16,15 @@
 
     </ListView>
 
+    <TextView
+        android:id="@+id/textForCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/addItem"
+        android:layout_alignBottom="@+id/addItem"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="54dp"
+        android:text="hello" />
     <Button
         android:id="@+id/addItem"
         android:layout_width="wrap_content"
